# pydebugai

./: .gitignore  ADD_TOKEN_TO_SECRETS.md  NEXT_STEPS_TO_PYPI.md  PUBLISHING_GUIDE.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  READY_FOR_PYPI.md  SECURE_TOKEN_SETUP.md  SOLUTION_SUMMARY.md  TRUSTED_PUBLISHER_SETUP.md  USER_GUIDE.md  VISUAL_GUIDE.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
pydebugai/: __init__.py  cli.py  executor.py  server.py
pydebugai/data/: README_TRAINING.md  __init__.py  error_patterns.json  error_patterns_comprehensive.json  error_patterns_original_backup.json  feedback.db  generate_training_data.py  merge_and_retrain.py
pydebugai/engine/: __init__.py  ast_analyzer.py  error_parser.py  levenshtein_fixer.py  ml_classifier.py  orchestrator.py  rule_engine.py  self_learner.py  transformer_model.py
pydebugai/models/: __init__.py
tests/: test_ast_analyzer.py  test_error_parser.py  test_rule_engine.py
tests/samples/: buggy_sample.py
vscode-extension/: extension.js  package.json
